# img_proc

./: CMakeLists.txt  README.md  main.cpp
headers/application/: application.h
headers/factory/: filtercreators.h  filterpipeline.h
headers/filter_makers/: crop_filter_cmd_args_maker.h  edge_filter_cmd_args_maker.h  gs_filter_cmd_args_maker.h  negative_filter_cmd_args_maker.h  sharp_filter_cmd_args_maker.h
headers/filters/: base_filter.h  crop_filter.h  edge_filter.h  gs_filter.h  negative_filter.h  sharp_filter.h
headers/image/: bmp_wrap.h  dib.h
headers/parser/: cmd_line_args_parser.h
headers/tests/: tests.h
src/application/: application.cpp
src/factory/: filtercreators.cpp  filterpipeline.cpp
src/filter_makers/: crop_filter_cmd_args_maker.cpp  edge_filter_cmd_args_maker.cpp  gs_filter_cmd_args_maker.cpp  negative_filter_cmd_args_maker.cpp  sharp_filter_cmd_args_maker.cpp
src/filters/: base_filter.cpp  crop_filter.cpp  edge_filter.cpp  gs_filter.cpp  negative_filter.cpp  sharp_filter.cpp
src/image/: bmp_wrap.cpp  dib.cpp
src/parser/: cmd_line_args_parser.cpp
src/tests/: tests.cpp
